--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,7 @@
     <title>Enter Your Instagram Username</title>
 </head>
 <body>
-    <h1>Enter Your Instagram Username</h1>
+    <h1>Enter Instagram Username</h1>
     <form action="/profile" method="post">
         <label for="username">Username:</label>
         <input type="text" name="username" required>
