--- a/templates/profile.html
+++ b/templates/profile.html
@@ -22,7 +22,7 @@
                 </li>
             {% endfor %}
         </ul>
-        <button type="submit">Save Selected Images</button>
+        <button type="submit">Save</button>
     </form>
 </body>
 </html>
